# micro-service

./: .env.example  .gitignore  AGENTS.md  BLUEPRINT.md  FRONTEND_PLAN.md  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml
.github/workflows/: tag-version.yml
gateway/kong/: kong.yml
monitoring/prometheus/: prometheus.yml
scripts/: bump_version.py
services/docs-service/: Dockerfile  requirements.txt
services/docs-service/app/: main.py
services/frontend/: Dockerfile  entrypoint.sh  index.html  news-api.html
services/frontend/js/: api.js  app.js  i18n.js  router.js
services/inventory-service/: requirements.txt
services/inventory-service/app/: main.py
services/inventory-service/app/core/: config.py
services/inventory-service/app/db/: init_db.py  session.py
services/inventory-service/tests/: conftest.py  test_inventory.py  test_main.py
services/order-service/: Dockerfile
services/order-service/app/: main.py
services/order-service/tests/: conftest.py  test_main.py  test_orders.py
services/payment-service/app/: main.py
services/payment-service/tests/: conftest.py  test_main.py  test_payment.py
services/product-service/: Dockerfile  requirements.txt
services/product-service/app/: main.py
services/product-service/tests/: conftest.py  test_products.py
services/user-service/: Dockerfile  requirements.txt
services/user-service/app/: main.py
services/user-service/tests/: conftest.py  test_google_auth.py  test_users.py
shared/enums/: status.py
shared/schemas/: api_key.py  base.py  events.py
(+162 files in other folders)
